frontend/test/should_fail/basic_101.grg
using attrib_model_001;

rule r {
	x: NBOOL;

	modify {
		eval {
			a = 42;
		}
	}
}

